hopefully fix timestamp width being too small

--- a/src/style.css
+++ b/src/style.css
@@ -187,6 +187,10 @@
     width: 2rem;
 }
 
+.w-12 {
+    width: 3rem;
+}
+
 .w-16 {
     width: 4rem;
 }
